Updated sim_EN -> sim_glmnet with alpha=1 and s = 'lambda.1s'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,7 @@ export(random_forest_importance_scores)
 export(selections_control_FDR)
 export(selections_control_PFER)
 export(selections_control_kFWER)
-export(sim_EN)
+export(sim_glmnet)
 export(sim_simple)
 export(simulWeib)
 export(stat_glmnet)
