--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,3 +37,4 @@ Suggests:
     testthat (>= 3.0.0)
 VignetteBuilder: knitr
 Config/testthat/edition: 3
+URL: http://opensource.nibr.com/knockofftools/
